--- a/config.env
+++ b/config.env
@@ -20,3 +20,4 @@ REST_TIMEFRAME_CODES_5MIN=minute5
 REST_TIMEFRAME_CODES_15MIN=minute15
 REST_TIMEFRAME_CODES_1H=hour1
 REST_TIMEFRAME_CODES_4H=hour4
+EQUITY=1000
