--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
 TELEGRAM_CHAT_ID=YOUR_TELEGRAM_CHAT_ID
-TWITTER_API_KEY=YOUR_TWITTER_API_KEY
-TWITTER_API_SECRET=YOUR_TWITTER_API_SECRET
-TWITTER_ACCESS_TOKEN=YOUR_TWITTER_ACCESS_TOKEN
-TWITTER_ACCESS_SECRET=YOUR_TWITTER_ACCESS_SECRET
-LINKEDIN_USERNAME=your_email@example.com
-LINKEDIN_PASSWORD=your_password
+TWITTER_API_KEY=IBzhTOdJkmZk4tYqWNeqeBWtM
+TWITTER_API_SECRET=gRY7BsXYB3TRanjbxVPEHfRns8g2KW9n0tExQUkoI5WEPX5zy8
+TWITTER_ACCESS_TOKEN=990831118072078341-TEROpY9oWwNEU1msbtAIOs1OQA8p94f
+TWITTER_ACCESS_SECRET=0Jtzn537eyMn1dFcy6t8UkVo00PlnPRWWLo47ghptLeiY
+LINKEDIN_USERNAME=javad.stg@gmail.com
+LINKEDIN_PASSWORD=Jz13530413@#
 LBANK_API_API_KEY=lban_api_key_here
 LBANK_API_API_SECRET=lban_api_secret_here
 SYMBOLS_VALUE=btc_usdt,eth_usdt,xrp_usdt,bnb_usdt,sol_usdt,doge_usdt,ada_usdt,trx_usdt,link_usdt,sui_usdt,avax_usdt,arb_usdt,matic_usdt,op_usdt,near_usdt,cro_usdt,gno_usdt,apt_usdt,xmr_usdt,kava_usdt,ton_usdt,mnt_usdt,blast_usdt,algo_usdt,rune_usdt,osmo_usdt,rsk_usdt,xin_usdt,celo_usdt,ftm_usdt,eos_usdt,xtz_usdt,neo_usdt,ont_usdt,metis_usdt,leo_usdt
@@ -15,7 +15,7 @@ WEBSOCKET_TIMEFRAME_CODES_5MIN=5min
 WEBSOCKET_TIMEFRAME_CODES_15MIN=15min
 WEBSOCKET_TIMEFRAME_CODES_1H=1hr
 WEBSOCKET_TIMEFRAME_CODES_4H=4hr
-REST_TIMEFRAME_CODES_1MIN=Minute1
+REST_TIMEFRAME_CODES_1MIN=minute1
 REST_TIMEFRAME_CODES_5MIN=minute5
 REST_TIMEFRAME_CODES_15MIN=minute15
 REST_TIMEFRAME_CODES_1H=hour1
