new lines added

--- a/config.env
+++ b/config.env
@@ -21,3 +21,7 @@ REST_TIMEFRAME_CODES_15MIN=minute15
 REST_TIMEFRAME_CODES_1H=hour1
 REST_TIMEFRAME_CODES_4H=hour4
 EQUITY=1000
+LOG_LEVEL=INFO
+LOG_FILE=logs/bot.log
+LOG_MAX_MB=10
+LOG_BACKUPS=7
