--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ LINKEDIN_USERNAME=javad.stg@gmail.com
 LINKEDIN_PASSWORD=Jz13530413@#
 LBANK_API_API_KEY=lban_api_key_here
 LBANK_API_API_SECRET=lban_api_secret_here
-SYMBOLS_VALUE=btc_usdt,eth_usdt,xrp_usdt,bnb_usdt,sol_usdt,not_usdt,doge_usdt,ada_usdt,trx_usdt,link_usdt,sui_usdt,avax_usdt,arb_usdt,op_usdt,near_usdt,gno_usdt,apt_usdt,ton_usdt,algo_usdt,xtz_usdt,leo_usdt
+SYMBOLS_VALUE=btc_usdt,eth_usdt,xrp_usdt,bnb_usdt,sol_usdt,not_usdt,doge_usdt,ada_usdt,trx_usdt,link_usdt,sui_usdt,avax_usdt,arb_usdt,op_usdt,near_usdt,apt_usdt,ton_usdt,algo_usdt,xtz_usdt,leo_usdt
 TIMEFRAMES_VALUE=1min,5min,15min,1h,4h
 WEBSOCKET_TIMEFRAME_CODES_1MIN=1min
 WEBSOCKET_TIMEFRAME_CODES_5MIN=5min
