--- a/config.env
+++ b/config.env
@@ -1,13 +1,23 @@
+# Telegram API
 TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
 TELEGRAM_CHAT_ID=YOUR_TELEGRAM_CHAT_ID
+
+# Twitter(X) API
 TWITTER_API_KEY=IBzhTOdJkmZk4tYqWNeqeBWtM
 TWITTER_API_SECRET=gRY7BsXYB3TRanjbxVPEHfRns8g2KW9n0tExQUkoI5WEPX5zy8
 TWITTER_ACCESS_TOKEN=990831118072078341-TEROpY9oWwNEU1msbtAIOs1OQA8p94f
 TWITTER_ACCESS_SECRET=0Jtzn537eyMn1dFcy6t8UkVo00PlnPRWWLo47ghptLeiY
+
+# Linledin API
 LINKEDIN_USERNAME=javad.stg@gmail.com
 LINKEDIN_PASSWORD=Jz13530413@#
+
+# LBank API
 LBANK_API_API_KEY=lban_api_key_here
 LBANK_API_API_SECRET=lban_api_secret_here
+
+
+# Trading Symbols and Timeframes
 SYMBOLS_VALUE=btc_usdt,eth_usdt,xrp_usdt,bnb_usdt,sol_usdt,not_usdt,doge_usdt,ada_usdt,trx_usdt,link_usdt,sui_usdt,avax_usdt,arb_usdt,op_usdt,near_usdt,apt_usdt,ton_usdt,algo_usdt,xtz_usdt,leo_usdt
 TIMEFRAMES_VALUE=1min,5min,15min,1h,4h
 WEBSOCKET_TIMEFRAME_CODES_1MIN=1min
@@ -26,9 +36,20 @@ REST_TIMEFRAME_CODES_12H=hour12
 REST_TIMEFRAME_CODES_1D=day1
 REST_TIMEFRAME_CODES_1W=week1
 REST_TIMEFRAME_CODES_1MTH=month1
+
+# WebSocket and API
+WEBSOCKET_URL=wss://www.lbkex.net/ws/V2/
+LBANK_WEBSOCKET_URL=wss://www.lbkex.net/ws/V2/
+
+
+# Retry and Depth Settings
+WS_MAX_RETRIES=5
+DEPTH_LEVEL=50
+
 EQUITY=1000
-LOG_LEVEL=INFO
-LOG_FILE=logs/bot.log
+
+# log file settings
+LOG_LEVEL=INFO,DEBUG,ERROR
+LOG_FILE=logs/mylog.log
 LOG_MAX_MB=10
 LOG_BACKUPS=7
-
