--- a/config.env
+++ b/config.env
@@ -36,6 +36,9 @@ REST_TIMEFRAME_CODES_12H=hour12
 REST_TIMEFRAME_CODES_1D=day1
 REST_TIMEFRAME_CODES_1W=week1
 REST_TIMEFRAME_CODES_1MTH=month1
+TIMEFRAME_MAPPING={"1min": "1min", "5min": "5min", "15min": "15min", "1h": "1hr", "4h": "4hr"}
+REST_TIMEFRAME_CODES={"1min": "minute1", "5min": "minute5", "15min": "minute15", "1h": "hour1", "4h": "hour4"}
+
 
 # WebSocket and API
 WEBSOCKET_URL=wss://www.lbkex.net/ws/V2/
