--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ LBANK_API_API_SECRET=lban_api_secret_here
 
 # Trading Symbols and Timeframes
 SYMBOLS_VALUE=btc_usdt,eth_usdt,xrp_usdt,bnb_usdt,sol_usdt,not_usdt,doge_usdt,ada_usdt,trx_usdt,link_usdt,sui_usdt,avax_usdt,arb_usdt,op_usdt,near_usdt,apt_usdt,ton_usdt,algo_usdt,xtz_usdt,leo_usdt
-TIMEFRAMES_VALUE=1min,5min,15min,1h,4h
+TIMEFRAMES=1min,5min,15min,1h,4h
 WEBSOCKET_TIMEFRAME_CODES_1MIN=1min
 WEBSOCKET_TIMEFRAME_CODES_5MIN=5min
 WEBSOCKET_TIMEFRAME_CODES_15MIN=15min
@@ -42,8 +42,6 @@ REST_TIMEFRAME_CODES={"1min": "minute1", "5min": "minute5", "15min": "minute15",
 
 # WebSocket and API
 WEBSOCKET_URL=wss://www.lbkex.net/ws/V2/
-LBANK_WEBSOCKET_URL=wss://www.lbkex.net/ws/V2/
-
 
 # Retry and Depth Settings
 WS_MAX_RETRIES=5
