to support incremental calculation

--- a/config.env
+++ b/config.env
@@ -18,7 +18,7 @@ LBANK_API_API_SECRET=lban_api_secret_here
 
 
 # Trading Symbols and Timeframes
-SYMBOLS_VALUE=btc_usdt,eth_usdt,xrp_usdt,bnb_usdt,sol_usdt,not_usdt,doge_usdt,ada_usdt,trx_usdt,link_usdt,sui_usdt,avax_usdt,arb_usdt,op_usdt,near_usdt,apt_usdt,ton_usdt,algo_usdt,xtz_usdt,leo_usdt
+SYMBOLS=btc_usdt,eth_usdt,xrp_usdt,bnb_usdt,sol_usdt,not_usdt,doge_usdt,ada_usdt,trx_usdt,link_usdt,sui_usdt,avax_usdt,arb_usdt,op_usdt,near_usdt,apt_usdt,ton_usdt,algo_usdt,xtz_usdt,leo_usdt
 TIMEFRAMES=1min,5min,15min,1h,4h
 WEBSOCKET_TIMEFRAME_CODES_1MIN=1min
 WEBSOCKET_TIMEFRAME_CODES_5MIN=5min
@@ -34,8 +34,7 @@ REST_TIMEFRAME_CODES_4H=hour4
 REST_TIMEFRAME_CODES_8H=hour8
 REST_TIMEFRAME_CODES_12H=hour12
 REST_TIMEFRAME_CODES_1D=day1
-REST_TIMEFRAME_CODES_1W=week1
-REST_TIMEFRAME_CODES_1MTH=month1
+
 TIMEFRAME_MAPPING={"1min": "1min", "5min": "5min", "15min": "15min", "1h": "1hr", "4h": "4hr"}
 REST_TIMEFRAME_CODES={"1min": "minute1", "5min": "minute5", "15min": "minute15", "1h": "hour1", "4h": "hour4"}
 
