--- a/config.env
+++ b/config.env
@@ -3,14 +3,14 @@ TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
 TELEGRAM_CHAT_ID=YOUR_TELEGRAM_CHAT_ID
 
 # Twitter(X) API
-TWITTER_API_KEY=IBzhTOdJkmZk4tYqWNeqeBWtM
-TWITTER_API_SECRET=gRY7BsXYB3TRanjbxVPEHfRns8g2KW9n0tExQUkoI5WEPX5zy8
-TWITTER_ACCESS_TOKEN=990831118072078341-TEROpY9oWwNEU1msbtAIOs1OQA8p94f
-TWITTER_ACCESS_SECRET=0Jtzn537eyMn1dFcy6t8UkVo00PlnPRWWLo47ghptLeiY
+TWITTER_API_KEY=IBzhTOdJkmZk4tYqW
+TWITTER_API_SECRET=gRY7BsXYB3TRanjbxVPEHfRns8QUkoI5WEPX5zy8
+TWITTER_ACCESS_TOKEN=990831118072078341-TEROpsbtAIOs1OQA8p94f
+TWITTER_ACCESS_SECRET=0JtzFcy6t8UkVo00PlnPRWWLo47ghptLeiY
 
 # Linledin API
 LINKEDIN_USERNAME=javad.stg@gmail.com
-LINKEDIN_PASSWORD=Jz13530413@#
+LINKEDIN_PASSWORD=Jz1783548925453042541563@#$
 
 # LBank API
 LBANK_API_API_KEY=lban_api_key_here
